# vutbr-fit-bio-cgp-image-filters

./: .gitignore  README.md
docs/doxygen/: doxygen.conf
docs/presentation/: imcgp.tex
docs/presentation/img/: best25.psd  best25_ribn.psd  best25_speckle.psd  best5.psd
msvc/: bio-image-filters-cuda.sln  bio-image-filters-cuda.vcxproj  bio-image-filters.sln  bio-image-filters.vcxproj
msvc/src/: cgp.cu.deps  cgp.cuh.deps  cgp_cuda.cu.deps
src/: CMakeLists.txt  cgp.cpp  cgp.cu  cgp.cuh  cgp.h  cgp_cuda.cu  cgp_cuda.cuh  cgp_enums.h  header.h  main.cpp
